# ai_code_reviewer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  PHASE1-INSTRUCTIONS.md  PHASE3-INSTRUCTIONS.md  README.md  REORGANIZATION_SUMMARY.md  WINDOWS_README.md  ai_code_reviewer.db  alembic.ini  bitbucket_client.py  config.py  create-phase1-issues.sh  create-phase3-issues.sh  dev_requirements.txt  docker-compose.yml  lint  lint.sh  llm_client.py  main.py  phase1-issues.md  phase3-issues.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  send_email.py  test_requirements.txt
.github/: copilot-instructions.md
Guidelines/: Universal_Engineering_Coding_Guidelines.md
alembic/: env.py
alembic/versions/: 20250107_0001_initial_schema.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.windows.yml  docker-compose.yml  nginx.conf  supervisord.conf
docs/: AI Code Reviewer Agent - Project Summary.md  AI Code Reviewer Agent.md  BACKUP_RESTORE.md  DATABASE.md  DOCKER.md  DOCKER_DATABASE_MANAGEMENT.md  DOCKER_UPGRADE_QUICKSTART.md  WINDOWS_DOCKER_SETUP.md  architecture.md  deployment.md  development.md  project-summary.md  webhook-payloads.md
scripts/: db_helper.py  docker-backup.sh  docker-restore.sh  docker-upgrade.sh  docker_db_backup.py  docker_db_restore.py  docker_migrate_db.sh  docker_upgrade_inplace.sh  fix-env-windows.ps1  lint.sh  mypy.ini  run_tests.py
src/ai_code_reviewer/: __init__.py  main.py
src/ai_code_reviewer/api/: __init__.py  app.py  dependencies.py  main.py
src/ai_code_reviewer/api/clients/: bitbucket_client.py  email_client.py  llm_client.py
src/ai_code_reviewer/api/core/: config.py  email_formatter.py  guidelines_loader.py  review_engine.py
src/ai_code_reviewer/api/db/: __init__.py  database.py  repository.py
src/ai_code_reviewer/api/frontend/: README.md  index.html  package-lock.json  package.json
src/ai_code_reviewer/api/frontend/public/: index.html
src/ai_code_reviewer/api/frontend/src/: App.tsx
src/ai_code_reviewer/api/frontend/src/components/DiffUpload/: DiffUploadForm.tsx  MarkdownPreview.tsx
src/ai_code_reviewer/api/frontend/src/components/FailuresTable/: FailureDetails.tsx  FailuresTable.tsx
src/ai_code_reviewer/api/frontend/src/components/Layout/: Header.tsx  Layout.tsx  Tabs.tsx
src/ai_code_reviewer/api/frontend/src/components/ManualReview/: ManualReviewForm.tsx  ReviewResult.tsx
src/ai_code_reviewer/api/frontend/src/components/ReviewsTable/: Pagination.tsx  ReviewDetails.tsx  ReviewsTable.tsx
src/ai_code_reviewer/api/frontend/src/components/SystemInfo/: SystemInfo.tsx
src/ai_code_reviewer/api/frontend/src/services/: api.ts
src/ai_code_reviewer/api/frontend/src/theme/: theme.ts
src/ai_code_reviewer/api/frontend/src/types/: types.ts
src/ai_code_reviewer/api/middleware/: __init__.py
src/ai_code_reviewer/api/routes/: failures.py  health.py  manual.py  reviews.py  webhook.py
src/ai_code_reviewer/clients/: __init__.py  bitbucket_client.py  email_client.py  llm_client.py
src/ai_code_reviewer/core/: config.py  review_engine.py
src/ai_code_reviewer/db/: __init__.py  database.py  models.py  repository.py
tests/: __init__.py  conftest.py  test_bitbucket_client.py  test_config.py  test_llm_client.py  test_main.py
tests/integration/: test_main.py  test_review_diff.py
tests/unit/: test_bitbucket_client.py  test_config.py  test_email_formatter.py  test_guidelines_loader.py  test_llm_client.py  test_review_engine.py
